--- a/EFAWeatherWatch Extension/Info.plist
+++ b/EFAWeatherWatch Extension/Info.plist
@@ -44,5 +44,7 @@
 	</dict>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to access location</string>
 </dict>
 </plist>
